--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend="setuptools.build_meta"
 
 [project]
 name = "airflow-config"
-authors = [{name = "Tim Paine", email = "t.paine154@gmail.com"}]
+authors = [{name = "The airflow-config authors", email = "3105306+timkpaine@users.noreply.github.com"}]
 description="Airflow utilities for configuration of many DAGs and DAG environments"
 readme = "README.md"
 license = { text = "Apache-2.0" }
@@ -34,8 +34,8 @@ classifiers = [
 
 
 [project.urls]
-Repository = "https://github.com/timkpaine/airflow-config"
-Homepage = "https://github.com/timkpaine/airflow-config"
+Repository = "https://github.com/airflow-laminar/airflow-config"
+Homepage = "https://github.com/airflow-laminar/airflow-config"
 
 [project.optional-dependencies]
 develop = [
