--- a/airflow_config/tests/setups/good/basic/config/test.yaml
+++ b/airflow_config/tests/setups/good/basic/config/test.yaml
@@ -1,5 +1,5 @@
 # @package _global_
 _target_: airflow_config.Configuration
-global_:
-  _target_: airflow_config.GlobalDagConfiguration
+default_args:
+  _target_: airflow_config.DefaultArgs
   owner: test
