--- a/airflow_config/tests/setups/good/options/config/test.yaml
+++ b/airflow_config/tests/setups/good/options/config/test.yaml
@@ -1,15 +1,16 @@
 # @package _global_
 _target_: airflow_config.Configuration
-global_:
-  _target_: airflow_config.GlobalDagConfiguration
+default_args:
+  _target_: airflow_config.DefaultArgs
   owner: test
   email: [myemail@myemail.com]
   email_on_failure: false
   email_on_retry: false
   retries: 0
   depends_on_past: false
+all_dags:
+  _target: airflow_config.DAGArgs
   schedule: "01:00"
   start_date: "2024-01-01"
   catchup: false
   tags: ["utility", "test"]
-
