--- a/airflow_config/tests/setups/good/options/config/test.yaml
+++ b/airflow_config/tests/setups/good/options/config/test.yaml
@@ -9,7 +9,7 @@ default_args:
   retries: 0
   depends_on_past: false
 all_dags:
-  _target: airflow_config.DAGArgs
+  _target: airflow_config.DagArgs
   schedule: "01:00"
   start_date: "2024-01-01"
   catchup: false
