add missing top level deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,10 @@ classifiers = [
 dependencies = [
     "apache-airflow>=2.8,<3",
     "hydra-core",
+    "jinja2",
     "omegaconf",
+    "pydantic>=2",
+    
 ]
 
 [project.urls]
