--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ replace = 'version = "{new_version}"'
 ignore = [
     "Makefile",
     "setup.py",
+    "docs/*/*",
     "example_dags/*",
 ]
 
@@ -94,6 +95,7 @@ exclude = [
     "/.github",
     "/.gitattributes",
     "/.gitignore",
+    "/docs",
     "/example_dags",
 ]
 
@@ -105,6 +107,7 @@ exclude = [
     "/.github",
     "/.gitattributes",
     "/.gitignore",
+    "/docs",
     "/pyproject.toml",
     "/example_dags",
 ]
@@ -131,3 +134,9 @@ section-order = [
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401", "F403"]
+
+[tool.yardang]
+title = "airflow-config"
+root = "README.md"
+pages = ["docs/src/API.md"]
+use-autoapi = false
