remove example dag, add colorlog direct dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,11 @@ classifiers = [
 
 dependencies = [
     "apache-airflow>=2.8,<3",
+    "colorlog",
     "hydra-core",
     "jinja2",
     "omegaconf",
     "pydantic>=2",
-    
 ]
 
 [project.urls]
