--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ replace = 'version = "{new_version}"'
 
 [tool.check-manifest]
 ignore = [
+    ".copier-answers.yml",
     "Makefile",
     "setup.py",
     "docs/*/*",
