--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,7 @@ include = [
     "README.md",
 ]
 exclude = [
+    ".copier-answers.yml",
     "/.github",
     "/.gitattributes",
     "/.gitignore",
@@ -105,6 +106,7 @@ include = [
     "/airflow_config",
 ]
 exclude = [
+    ".copier-answers.yml",
     "/.github",
     "/.gitattributes",
     "/.gitignore",
