--- a/airflow_config/tests/setups/good/options/config/test.yaml
+++ b/airflow_config/tests/setups/good/options/config/test.yaml
@@ -8,7 +8,7 @@ default_args:
   email_on_retry: false
   retries: 0
   depends_on_past: false
-all_dags:
+default_dag_args:
   _target: airflow_config.DagArgs
   schedule: "01:00"
   start_date: "2024-01-01"
