--- a/airflow_config/tests/setups/extensions/priority/config/test.yaml
+++ b/airflow_config/tests/setups/extensions/priority/config/test.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 _target_: airflow_config.Configuration
 default_args:
-  _target_: airflow_config.DefaultArgs
+  _target_: airflow_config.DefaultTaskArgs
   owner: test
 
 extensions:
