--- a/airflow_config/tests/setups/good/envs/config/prod.yaml
+++ b/airflow_config/tests/setups/good/envs/config/prod.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 _target_: airflow_config.Configuration
 default_args:
-  _target_: airflow_config.DefaultArgs
+  _target_: airflow_config.DefaultTaskArgs
   owner: prod
   email: [myemail@myemail.com]
