--- a/airflow_config/tests/setups/good/dag-factory/config/test.yaml
+++ b/airflow_config/tests/setups/good/dag-factory/config/test.yaml
@@ -1,7 +1,8 @@
+
 # @package _global_
 _target_: airflow_config.Configuration
 default_args:
-  _target_: airflow_config.DefaultTaskArgs
+  _target_: airflow_config.TaskArgs
   owner: test
   email: [myemail@myemail.com]
   email_on_failure: false
@@ -15,13 +16,77 @@ default_dag_args:
   catchup: false
   tags: ["utility", "test"]
 dags:
-  default_args:
-    owner: "different_owner"
-  concurrency: 1
-  max_active_runs: 1
-  dagrun_timeout_sec: 600
-  default_view: "tree"
-  orientation: "LR"
-  schedule: "0 1 * * *"
-  on_failure_callback_name: print_hello_from_callback
-  on_failure_callback_file: $CONFIG_ROOT_DIR/print_hello.py
+  example_dag:
+    default_args:
+      owner: "custom_owner"
+    description: "this is an example dag"
+    schedule_interval: "0 3 * * *"
+    render_template_as_native_obj: True
+    tasks:
+      task_1:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 1"
+      task_2:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 2"
+        dependencies: [task_1]
+      task_3:
+        operator: airflow.operators.python_operator.PythonOperator
+        python_callable_name: print_hello
+        python_callable_file: $DAG_DIR/print_hello.py
+        dependencies: [task_1]
+
+  example_dag2:
+    default_args:
+      timezone: Europe/Amsterdam
+    tasks:
+      task_1:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 1"
+      task_2:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 2"
+        dependencies: [task_1]
+      task_3:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 3"
+        dependencies: [task_1]
+
+  example_dag3:
+    tasks:
+      task_1:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 1"
+      task_2:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 2"
+        dependencies: [task_1]
+      task_3:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 3"
+        dependencies: [task_1]
+
+  example_dag4:
+    description: "this dag uses task groups"
+    task_groups:
+      task_group_1:
+        tooltip: "this is a task group"
+        dependencies: [task_1]
+    tasks:
+      task_1:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 1"
+      task_2:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 2"
+        task_group_name: task_group_1
+      task_3:
+        operator: airflow.operators.python_operator.PythonOperator
+        python_callable_name: print_hello
+        python_callable_file: $DAG_DIR/print_hello.py
+        task_group_name: task_group_1
+        dependencies: [task_2]
+      task_4:
+        operator: airflow.operators.bash_operator.BashOperator
+        bash_command: "echo 1"
+        dependencies: [task_group_1]
