--- a/airflow_config/tests/setups/good/envs/config/dev.yaml
+++ b/airflow_config/tests/setups/good/envs/config/dev.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 _target_: airflow_config.Configuration
 default_args:
-  _target_: airflow_config.DefaultTaskArgs
+  _target_: airflow_config.TaskArgs
   owner: dev
   email: [myemail@myemail.com]
