--- a/airflow_config/tests/setups/good/options/config/test.yaml
+++ b/airflow_config/tests/setups/good/options/config/test.yaml
@@ -11,6 +11,6 @@ default_args:
 default_dag_args:
   _target: airflow_config.DagArgs
   schedule: "01:10"
-  start_date: "2024-01-01"
+  start_date: ["2024-01-01", "America/New_York"]
   catchup: false
   tags: ["utility", "test"]
