--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ Homepage = "https://github.com/airflow-laminar/airflow-config"
 [tool.bumpversion]
 current_version = "1.1.0"
 commit = true
-tag = false
+tag = true 
 
 [[tool.bumpversion.files]]
 filename = "airflow_config/__init__.py"
