--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "airflow-pydantic",
+    "airflow-pydantic>=0.2.0",
     "apache-airflow>=2.8,<3",
     "colorlog",
     "hydra-core",
