Add visual plugin to render config, prohibit .yml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ ignore = [
 [tool.coverage.run]
 branch = true
 omit = [
+    "airflow_config/plugins/",
     "airflow_config/tests/integration/",
 ]
 [tool.coverage.report]
