--- a/airflow_config/tests/setups/good/dag-specialize/config/test.yaml
+++ b/airflow_config/tests/setups/good/dag-specialize/config/test.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 _target_: airflow_config.Configuration
-default_args:
+default_task_args:
   _target_: airflow_config.TaskArgs
   owner: test
   email: [myemail@myemail.com]
@@ -10,7 +10,7 @@ default_args:
   depends_on_past: false
 
 default_dag_args:
-  _target: airflow_config.DagArgs
+  _target_: airflow_config.DagArgs
   schedule: "01:00"
   start_date: "2024-01-01"
   catchup: false
@@ -18,6 +18,7 @@ default_dag_args:
 
 dags:
   example_dag:
+    _target_: airflow_config.Dag
     default_args:
       owner: "custom_owner"
     description: "this is an example dag"
@@ -26,6 +27,7 @@ dags:
     max_active_runs: 1
 
   example_dag2:
+    _target_: airflow_config.Dag
     default_args:
       owner: "custom_owner2"
     schedule: "0 4 * * *"
