--- a/airflow_config/tests/setups/good/dag-factory/config/test.yaml
+++ b/airflow_config/tests/setups/good/dag-factory/config/test.yaml
@@ -12,7 +12,7 @@ default_args:
   depends_on_past: false
 
 default_dag_args:
-  _target: airflow_config.DagArgs
+  _target_: airflow_config.DagArgs
   schedule: "01:00"
   start_date: "2024-01-01"
   catchup: false
@@ -84,7 +84,7 @@ dags:
 #         operator: airflow.operators.bash_operator.BashOperator
 #         bash_command: "echo 3"
 #         dependencies: [task_1]
-# 
+#
 #   example_dag4:
 #     description: "this dag uses task groups"
 #     task_groups:
