--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,9 +29,9 @@ jobs:
 
     strategy:
       matrix:
+        airflow-version: ["2.9.2", "2.10.4"]
         os: [ubuntu-latest]
         python-version: ["3.11"]
-        airflow-version: ["2.8.1", "2.9.2", "2.10.4"]
 
     steps:
     - uses: actions/checkout@v4
@@ -39,6 +39,10 @@ jobs:
     - uses: actions-ext/python/setup@main
       with:
         version: ${{ matrix.python-version }}
+
+    - uses: actions-ext/node/setup@main
+      with:
+        version: 20.x
 
     - name: Install dependencies
       run: make develop
@@ -58,12 +62,12 @@ jobs:
     - name: Test
       run: make coverage
 
-    - name: Upload test results (Python)
+    - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
-        name: test-results-${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.airflow-version }}
-        path: junit.xml
-      if: ${{ always() }}
+        name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
+        path: '**/junit.xml'
+      if: matrix.airflow-version == '2.10.4'
 
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
