--- a/airflow_config/tests/setups/good/dag-factory/config/test.yaml
+++ b/airflow_config/tests/setups/good/dag-factory/config/test.yaml
@@ -26,26 +26,23 @@ dags:
     schedule: "0 3 * * *"
     tasks:
       task_1:
+        _target_: airflow_pydantic.BashOperator
         operator: "airflow.operators.bash_operator.BashOperator"
-        args:
-          _target_: airflow_config.BashOperatorArgs
-          bash_command: "echo 1"
+        bash_command: "echo 1"
       task_2:
+        _target_: airflow_pydantic.BashOperator
         operator: "airflow.operators.bash_operator.BashOperator"
-        args:
-          _target_: airflow_config.BashOperatorArgs
-          bash_command: "echo 2"
+        bash_command: "echo 2"
         dependencies: [task_1]
       task_3:
+        _target_: airflow_pydantic.PythonOperator
         operator: "airflow.operators.python_operator.PythonOperator"
-        args:
-          _target_: airflow_config.PythonOperatorArgs
-          python_callable: airflow_config.tests.setups.good.utils.print_hello.print_hello
-          op_args: []
-          op_kwargs: {}
-          templates_dict: {}
-          templates_exts: null
-          show_return_value_in_logs: true
+        python_callable: airflow_config.tests.setups.good.utils.print_hello.print_hello
+        op_args: []
+        op_kwargs: {}
+        templates_dict: {}
+        templates_exts: null
+        show_return_value_in_logs: true
         dependencies: [task_1]
 
   example_dag2:
@@ -54,21 +51,18 @@ dags:
     schedule: "0 4 * * *"
     tasks:
       task_1:
+        _target_: airflow_pydantic.BashOperator
         operator: airflow.operators.bash_operator.BashOperator
-        args:
-          _target_: airflow_config.BashOperatorArgs
-          bash_command: "echo 1"
+        bash_command: "echo 1"
       task_2:
+        _target_: airflow_pydantic.BashOperator
         operator: airflow.operators.bash_operator.BashOperator
-        args:
-          _target_: airflow_config.BashOperatorArgs
-          bash_command: "echo 2"
+        bash_command: "echo 2"
         dependencies: [task_1]
       task_3:
+        _target_: airflow_pydantic.BashOperator
         operator: airflow.operators.bash_operator.BashOperator
-        args:
-          _target_: airflow_config.BashOperatorArgs
-          bash_command: "echo 3"
+        bash_command: "echo 3"
         dependencies: [task_1]
 
 #   example_dag3:
