--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.11
+      - uses: actions-ext/node/setup@main
       - run: pip install .
       - run: pip install yardang
       - run: yardang build
