--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,9 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.11
+      - uses: actions-ext/python/setup@main
       - uses: actions-ext/node/setup@main
       - run: pip install .
       - run: pip install yardang
