Move priority and balancer to top level

--- a/airflow_config/tests/setups/extensions/priority/config/test.yaml
+++ b/airflow_config/tests/setups/extensions/priority/config/test.yaml
@@ -6,4 +6,4 @@ default_args:
 
 extensions:
   priority:
-    _target_: airflow_config.PriorityConfiguration
+    _target_: airflow_priority.PriorityConfiguration
