--- a/airflow_config/tests/setups/factory/config/multi.yaml
+++ b/airflow_config/tests/setups/factory/config/multi.yaml
@@ -2,6 +2,13 @@
 # @package _global_
 _target_: airflow_config.Configuration
 
+default_dag_args:
+  _target_: airflow_config.DagArgs
+  schedule: "01:00"
+  start_date: "2024-01-01"
+  catchup: false
+  tags: ["utility", "test"]
+
 dags:
   example_dag:
     schedule: "0 3 * * *"
