Fix test assertions, add regression test against balancer variable renderer

--- a/airflow_config/tests/setups/factory/config/extensions/balancer.yaml
+++ b/airflow_config/tests/setups/factory/config/extensions/balancer.yaml
@@ -4,6 +4,6 @@ _target_: airflow_balancer.BalancerConfiguration
 hosts:
   - name: server2
     tags: [tag2]
-
-  - name: server1
-    tags: [tag1]
+    username: user1
+    password_variable: myvar
+    password_variable_key: password
