--- a/airflow_config/tests/setups/factory/config/factory.yaml
+++ b/airflow_config/tests/setups/factory/config/factory.yaml
@@ -63,16 +63,16 @@ dags:
     tasks:
       task_1:
         _target_: airflow_pydantic.BashOperator
-        operator: airflow.operators.bash_operator.BashOperator
+        operator: airflow.operators.bash.BashOperator
         bash_command: "echo \"1\""
       task_2:
         _target_: airflow_pydantic.BashOperator
-        operator: airflow.operators.bash_operator.BashOperator
+        operator: airflow.operators.bash.BashOperator
         bash_command: "echo 2"
         dependencies: [task_1]
       task_3:
         _target_: airflow_pydantic.BashOperator
-        operator: airflow.operators.bash_operator.BashOperator
+        operator: airflow.operators.bash.BashOperator
         bash_command: "echo 3"
         dependencies: [task_1]
 
