--- a/airflow_config/tests/setups/factory/config/balancer.yaml
+++ b/airflow_config/tests/setups/factory/config/balancer.yaml
@@ -9,7 +9,7 @@ dags:
     schedule: "0 3 * * *"
     tasks:
       task_1:
-        _target_: airflow_pydantic.SSHOperator
+        _target_: airflow_config.SSHOperator
         ssh_conn_id: test
         ssh_hook:
           _target_: airflow_balancer.BalancerHostQueryConfiguration
