--- a/airflow_config/tests/setups/factory/config/self_reference.yaml
+++ b/airflow_config/tests/setups/factory/config/self_reference.yaml
@@ -11,7 +11,7 @@ dags:
     schedule: "0 3 * * *"
     tasks:
       task_1:
-        _target_: airflow_pydantic.SSHOperator
+        _target_: airflow_config.SSHOperator
         ssh_conn_id: test
         ssh_hook: airflow_config.tests.setups.factory.utils.get_ssh_hook_from_config
         command: test
