Handle explicit none, fixes #41

--- a/airflow_config/tests/setups/basic/config/complex.yaml
+++ b/airflow_config/tests/setups/basic/config/complex.yaml
@@ -25,6 +25,10 @@ dags:
     tags: ["celery", "utility"]
     description: "Clean worker logs"
     schedule: "0 4 * * *"
+  none-schedule:
+    tags: ["utility"]
+    description: "No schedule"
+    schedule: null
 
 defaults:
   - extensions/balancer@extensions.balancer
