Support use without airflow installed

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,9 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: ["3.11"]
-        node-version: [20.x]
+        airflow: ["<3", ">=3"]
+        # TODO finish
+        # airflow: ["<3", ">=3", ""]
 
     steps:
     - uses: actions/checkout@v4
@@ -46,6 +48,14 @@ jobs:
 
     - name: Install dependencies
       run: make develop
+
+    - name: Install Airflow
+      run: uv pip install "apache-airflow${{ matrix.airflow }}"
+      if: ${{ matrix.airflow != '' }}
+
+    - name: Uninstall Airflow
+      run: uv pip uninstall apache-airflow
+      if: ${{ matrix.airflow == '' }}
 
     - name: Lint
       run: make lint
@@ -65,29 +75,30 @@ jobs:
     - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
-        name: test-results-${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.node-version }}
+        name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
         path: '**/junit.xml'
-      if: ${{ always() }}
+      if: matrix.airflow == '<3'
 
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
       with:
         files: '**/junit.xml'
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.airflow == '<3'
 
     - name: Upload coverage
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+      if: matrix.airflow == '<3'
 
     - name: Make dist
       run: make dist
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.airflow == '<3'
 
     - uses: actions/upload-artifact@v4
       with:
         name: dist-${{matrix.os}}
         path: dist
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.airflow == '<3'
 
 
