--- a/airflow_config/tests/setups/factory/config/multi.yaml
+++ b/airflow_config/tests/setups/factory/config/multi.yaml
@@ -24,5 +24,5 @@ dags:
     tasks:
       task_1:
         _target_: airflow_config.BashOperator
-        operator: airflow.operators.bash.BashOperator
+        operator: airflow.providers.standard.operators.bash.BashOperator
         bash_command: "echo \"1\""
