--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,10 @@ classifiers = [
 ]
 
 dependencies = [
-    "airflow-pydantic>=1.2,<1.4",
+    "airflow-pydantic>=1.2,<1.5",
     "apache-airflow>=2.9,<3.1",
+    "apache-airflow-providers-ssh",
+    "apache-airflow-providers-standard",
     "colorlog",
     "hydra-core",
     "jinja2",
