--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions-ext/python/setup@main
       - uses: actions-ext/node/setup@main
+      - run: pip install .
       - run: pip install .[develop]
       - run: pip install yardang
       - run: yardang build
